feat: Add Effect library overview and usage examples in a new post
feat: Create StudioCMS project page with description and links

--- a/src/content/other/about.mdx
+++ b/src/content/other/about.mdx
@@ -1,5 +1,5 @@
-Spectre is a terminal-inspired theme for Astro!
+I'm a Network Engineer turned Software Developer with a passion for Open Source. I love building tools and resources that help others, and I'm always looking for new ways to contribute to the community.
 
-It features a sleek dark-mode aesthetic, various social features inspired by Neocities that are powered by a self-hostable Discord Bot, perfect lighthouse scores, full keyboard accessibility, comments powered by [giscus](https://giscus.app), a search powered by [pagefind](https://pagefind.app) and more!
+I've been self-employed since 2019, and in 2024 I started my journey in the Astro community. While learning Astro, I ended up becoming a creator of the StudioCMS project, which is a CMS built with Astro. I recently joined the Astro team as a maintainer, and I'm excited to continue contributing to the ecosystem.
 
-If you want to dive deeper, check out the example project, and if you want to get started, check out the blog post!
+When I'm not coding, you can find me exploring new technologies, contributing to open source projects, or playing minecraft on the public [Station48 Cobblemon](https://station48.xyz) community ran server. I believe in the power of community and collaboration, and I'm always eager to connect with fellow developers and enthusiasts.
