Add Expressive Code TwoSlash documentation and Spectre Dark theme
- Created a new documentation file for Expressive Code TwoSlash, detailing its purpose and usage with TypeScript.
- Added an example TypeScript code snippet demonstrating the functionality of TwoSlash.
- Introduced a new dark theme, Spectre Dark, based on GitHub Dark, with customized color settings for various UI elements.

--- a/src/content/posts/effect.mdx
+++ b/src/content/posts/effect.mdx
@@ -142,6 +142,7 @@ This code defines a utility function `scrypt` that wraps the Node.js `scrypt` fu
 
 ```ts title="hash-effect.ts"
 import { type ScryptOptions, scrypt } from 'node:crypto';
+import { Effect } from 'studiocms/effect';
 
 /**
  * The `Scrypt` class provides a service for securely hashing passwords using the scrypt algorithm.
