--- a/src/content/projects/studiocms.mdx
+++ b/src/content/projects/studiocms.mdx
@@ -30,7 +30,7 @@ However, it is also a solution that basically requires you to be a developer, or
 There’s a lot of CMSs out there, with different flavors and features for your needs, but there is none that completely takes advantage of all of Astro’s capabilities. That’s why StudioCMS exists: a CMS that is completely focused on Astro and that can hook into every single one of its features to provide a highly improved DX.
 
 Learn more about StudioCMS
-- [official website](https://studiocms.dev) 
+- [Official website](https://studiocms.dev) 
 - [GitHub repository](https://github.com/withstudiocms/studiocms)
 - [Discord community](https://chat.studiocms.dev)
 
